--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
-    "mssql": "^7.2.1"
+    "morgan": "^1.10.0",
+    "mssql": "^7.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.4",
     "@types/node": "^16.11.7",
     "ts-node": "^10.4.0",
