--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "lint": "eslint -c .eslintrc.js --ext .ts .",
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
@@ -16,8 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "express": "^4.17.1",
-    "helmet": "^4.6.0",
+    "express": "^4.17.2",
+    "helmet": "^5.0.2",
     "morgan": "^1.10.0",
     "mssql": "^7.3.0"
   },
@@ -26,10 +26,13 @@
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.4",
-    "@types/node": "^16.11.7",
+    "@types/node": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "^8.7.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
-    "tslint": "^6.1.3",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.5"
   }
 }
