--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "target": "es6",
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
+    "strict": true,
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
