--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.18.1",
     "helmet": "^6.0.0",
     "morgan": "^1.10.0",
-    "mssql": "^9.0.1"
+    "mssql": "^9.0.1",
+    "passport": "^0.6.0",
+    "passport-azure-ad": "^4.3.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -29,6 +31,7 @@
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^8.1.1",
     "@types/node": "^18.7.16",
+    "@types/passport-azure-ad": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "eslint": "^8.23.0",
