--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-azure-ad": "^4.3.5"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.3",
     "@types/express": "^4.17.17",
