--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
     "mssql": "^9.2.0",
     "passport": "^0.6.0",
-    "passport-azure-ad": "^4.3.5"
+    "passport-azure-ad": "^4.3.5",
+    "strip-bom-stream": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
