--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "xml-js": "^1.6.11"
