--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "mssql": "^10.0.2",
+    "mssql": "^11.0.1",
     "passport": "^0.7.0",
     "passport-azure-ad": "^4.3.5",
+    "shelljs": "^0.8.5",
     "strip-bom-stream": "^5.0.0"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/mssql": "^9.1.5",
     "@types/node": "^20.12.11",
     "@types/passport-azure-ad": "^4.3.6",
+    "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
