--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
+  },
+  "overrides": {
+    "glob": "8.1.0",
+    "minimatch": "5.1.2"
   }
 }
