--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/nodemailer": "^6.4.16",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
@@ -24,6 +25,7 @@
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
     "mssql": "^11.0.1",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-azure-ad": "^4.3.5",
     "shelljs": "^0.8.5",
