--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "dev": "tsx watch --clear-screen=false src/index.ts",
     "lint": "eslint -c .eslintrc.js --ext .ts .",
-    "build": "tsc",
+    "build": "tsup",
     "prestart": "npm run build",
-    "start": "node .",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,8 +25,10 @@
     "morgan": "^1.10.0",
     "mssql": "^11.0.1",
     "nodemailer": "^6.9.15",
+    "papaparse": "^5.4.1",
     "passport": "^0.7.0",
     "passport-azure-ad": "^4.3.5",
+    "pdf-parse-new": "^1.3.8",
     "shelljs": "^0.8.5",
     "strip-bom-stream": "^5.0.0"
   },
@@ -37,18 +39,23 @@
     "@types/morgan": "^1.9.9",
     "@types/mssql": "^9.1.5",
     "@types/node": "^20.12.11",
+    "@types/papaparse": "^5.3.15",
     "@types/passport-azure-ad": "^4.3.6",
     "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
+    "tsup": "^8.3.5",
+    "tsx": "^4.19.2",
     "typescript": "^5.5.4"
   },
-  "overrides": {
-    "glob": "8.1.0",
-    "minimatch": "5.1.2"
+  "tsup": {
+    "entry": [
+      "src/index.ts"
+    ],
+    "splitting": false,
+    "sourcemap": true,
+    "clean": true
   }
 }
